--- a/resources.html
+++ b/resources.html
@@ -73,6 +73,7 @@
                     <ul id="main-menu">
                         <li class="menu-item"><a href="index.html">Home</a></li>
                         <li class="menu-item"><a href="what-we-believe.html">What we believe</a></li>
+                        <li class="menu-item"><a href="what-to-expect.html">What to expect</a></li>
                         <li class="menu-item current-menu-ancestor"><a href="resources.html">Resources</a></li>
                         <li class="menu-item"><a href="contact.html">Contact</a></li>
                     </ul><!-- #main-menu -->
