--- a/what-to-expect.html
+++ b/what-to-expect.html
@@ -54,7 +54,7 @@
           <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body class="background-light twlsky-pink twlsky-mixedcolours isolated-sections loader-bar">
+    <body class="background-light twlsky-orange twlsky-mixedcolours isolated-sections loader-bar">      
 
         <!-- Page Outer Container -->
         <div class="outer-container clearfix">
@@ -71,9 +71,9 @@
                     <div id="mobile-menu-icon" class="btn btn-outline-inverse visible-xs"><span class="glyphicon glyphicon-th"></span></div>
 
                     <ul id="main-menu">
-                        <li class="menu-item current-menu-ancestor"><a href="index.html">Home</a></li>
+                        <li class="menu-item"><a href="index.html">Home</a></li>
                         <li class="menu-item"><a href="what-we-believe.html">What we believe</a></li>
-                        <li class="menu-item"><a href="what-to-expect.html">What to expect</a></li>
+                        <li class="menu-item current-menu-ancestor"><a href="what-to-expect.html">What to expect</a></li>
                         <li class="menu-item"><a href="resources.html">Resources</a></li>
                         <li class="menu-item"><a href="contact.html">Contact</a></li>
                     </ul><!-- #main-menu -->
@@ -86,144 +86,70 @@
             <!-- =========== Page Body Inside Content =========== -->
             <div class="inside-body-content-container clearfix">
 
-                <!-- =========== Section 1: Carousel =========== -->
-                <div id="top-banner" class="container-fluid carousel-container horizontal-section-container clearfix">
-                    <div class="row">
-                        <div class="col-xs-12">
-
-                            <div id="top-banner-carousel" class="owl-carousel owl-theme full-page-image-slider">
-
-                                <div class="item">
-                                    <div class="text bottom left">
-                                        <a href="what-we-believe.html"><h2>Together we will live forever</h2></a>
-                                        <div class="clearfix"></div>
-                                        <!-- <a href="what&#45;we&#45;believe.html"><h5>Interested?</h5></a> -->
-                                    </div>
-                                    <a href="what-we-believe.html"><img class="lazyOwl" data-src="images/tree_of_life.jpg" src="#" alt="Tree of life"></a>
-                                </div>
-
-                                <div class="item">
-                                    <div class="text bottom right">
-                                        <a href="contact.html.html"><h2>What is the church?</h2></a>
-                                        <div class="clearfix"></div>
-                                        <a href="contact.html"><h5>It's not a building, it's not a priest - it's the people. Come meet us!</h5></a>
-                                    </div>
-                                    <a href="contact.html.html"><img class="lazyOwl" data-src="images/people1.jpg" src="#" alt="The church"></a>
-                                </div>
-
-                                <div class="item">
-                                    <div class="text bottom right no-side-padding">
-                                        <!-- <a href="resources.html"><h2></h2></a> -->
-                                        <div class="clearfix"></div>
-                                        <a href="resources.html"><h6>"Every good gift and every perfect gift is from above, coming down from the Father of lights with whom there is no variation or shadow due to change." (James 1:17)</h6></a>
-                                    </div>
-                                    <a href="resources.html"><img class="lazyOwl" data-src="images/vanilla-sky-mke.jpg" src="#" alt="Vanilla sky"></a>
-                                </div>
-
-                            </div><!-- #top-banner-carousel -->
-
-                            <!-- banner navigation arrows - comment out to de-activate -->
-                            <div class="slider-nav slider-nav-left"><i class="fa fa-angle-left"></i></div>
-                            <div class="slider-nav slider-nav-right"><i class="fa fa-angle-right"></i></div>
-
-                        </div><!-- .col-xs-12 -->
-                    </div><!-- .row -->
-
-                </div><!-- #top-banner -->
-                <!-- End: Section 1: Carousel -->
+                <!-- =========== Section 1: Top Banner =========== -->
+                <!-- <div id="top&#45;banner" class="container&#45;fluid horizontal&#45;section&#45;container clearfix"> -->
+                <!--     <div class="row"> -->
+                <!--         <div class="col&#45;xs&#45;12"> -->
+                <!--             <img src="images/tree_of_life.jpg" alt="Tree of life" class="full&#45;width&#45;image"> -->
+                <!--         </div><!&#45;&#45; .col&#45;xs&#45;12 &#45;&#45;> -->
+                <!--     </div><!&#45;&#45; .row &#45;&#45;> -->
+                <!-- </div> -->
+                <!-- End: Section 1: Top Banner -->
 
                 <!-- =========== Section 2 =========== -->
                 <div class="container-fluid horizontal-section-container clearfix">
                     <div class="row">
 
-                        <div class="col-sm-7">
-                            <!-- Website Intro Paragraph -->
-                            <div id="home-intro-paragraph" class="section-container featured-text clearfix">
-
-                                <h2>Welcome!</h2>
-
-                                <p>We are a simple group of Christians who meet together here in the Milwaukee area. We strive to follow the word of God as communicated in the Bible.</p>
-
-                                <p><a href="what-we-believe.html" class="btn btn-outline-inverse btn-lg">find out more</a></p>
-
-                            </div><!-- .section-container -->
-                            <!-- End: Website Intro Paragraph -->
-                        </div><!-- .col-sm-7 -->
-
-                        <div class="col-sm-5">
-
-                            <!-- Services -->
-                            <div id="home-services" class="section-container sm-extra-top-padding clearfix">
-
-                                <!-- <a href="services&#45;grid.html" class="section&#45;header with&#45;icon"> -->
-                                <!--     <h5 class="text">Quick Info</h5> -->
-                                <!-- </a><!&#45;&#45; .section&#45;header &#45;&#45;> -->
+                        <div class="col-sm-12">
+                            <!-- Main Page Content -->
+                            <div id="main-page-content" class="section-container main-page-content clearfix">
 
                                 <div class="section-content clearfix">
-                                    <h4><b>Meeting times</b></h4>
-                                    <ul class="vertical-simple-list">
 
-                                        <!-- list item -->
-                                        <li class="item clearfix"><a href="#" class="item-content">
-                                            <h6 class="title">Sunday 9:30am - Bible Study</h6>
-                                        </a></li>
+                                    <h1 class="page_title">What to expect</h1>
 
-                                        <!-- list item -->
-                                        <li class="item clearfix"><a href="#" class="item-content">
-                                            <h6 class="title">Sunday 10:30am - Worship Service</h6>
-                                        </a></li>
+                                    <div class="row">
+                                      <div class="col-sm-6">
+                                        
+                                        <p>Here is what you can expect when you visit.</p>
 
-                                        <!-- list item -->
-                                        <li class="item clearfix"><a href="#" class="item-content">
-                                            <h6 class="title">Wednesday 7:00pm - Bible Study</h6>
-                                        </a></li>
+                                        <p>We are a group of individuals striving together to live a more godly and pure life.  We are a family and hope you will get a sense of that when you visit.</p>
 
-                                    </ul><!-- .vertical-simple-list -->
-                                </div><!-- .section-content -->
+                                        <p>For the classes on Sunday and Wednesday we have children classes as well as an adult class to discuss/study various scripture.</p>
 
-                                <div class="section-content clearfix">
-                                    <h4><b>Location</b></h4>
-                                    <ul class="vertical-simple-list">
+                                        <p>During out worship service we:</p>
 
-                                        <!-- list item -->
-                                        <li class="item clearfix"><a href="#" class="item-content">
-                                            <h6 class="title"><a href="https://www.google.com/maps/place/9413+W+Greenfield+Ave,+West+Allis,+WI+53214/@43.0164229,-88.0296612,17z/data=!3m1!4b1!4m2!3m1!1s0x88050542307b66fd:0xc6cd4d9f2178f8e0">9413 W Greenfield Ave, West Allis, WI</a></h6>
-                                        </a></li>
+                                        <ul>
+                                        <li>Pray</li>
+                                        <li>Sing songs of worship and encouragement (A cappella)</li>
+                                        <li>Give/Contribution.  This is for the members and not at all expected by visitors. </li>
+                                        <li>Lords Supper- We partake of this each and every Sunday.</li>
+                                        <li>Sermon.  You can listen to previous sermons from this site.</li>
+                                        </ul>
 
-                                        <!-- list item -->
-                                        <li class="item clearfix"><a href="contact.html" class="item-content">
-                                            <h6 class="title">(For directions, call 414-393-8777)</h6>
-                                        </a></li>
+                                        <p>Our service is intended follow examples we see in the New Testament to the best of our ability and will be happy to study with you why we do what we do or anything else you may have questions on.  Please stick around a bit so we can get to know you more.</p>
 
-                                    </ul><!-- .vertical-simple-list -->
+                                        <p>Hope to see you soon.</p>
+                                      </div>
+                                      <div class="col-sm-6">
+                                        <img src="images/church_group_picture_2016.jpg" class="max-width-image">
+                                      </div>
+                                    </div>
+
                                 </div><!-- .section-content -->
 
                             </div><!-- .section-container -->
-                            <!-- End: Services -->
+                            <!-- End: Main Page Content -->
+                        </div><!-- .col-sm-12 -->
 
-                        </div><!-- .col-sm-5 -->
+
 
                     </div><!-- .row -->
                 </div><!-- .container-fluid -->
                 <!-- End: Section 2 -->
 
-                <!-- =========== Section 3 =========== -->
-                <!-- <div class="container&#45;fluid horizontal&#45;section&#45;container clearfix"> -->
-                <!--     <div class="row"> -->
-                <!--  -->
-                <!--         <div class="col&#45;sm&#45;12"> -->
-                <!--             <!&#45;&#45; Website Intro Paragraph &#45;&#45;> -->
-                <!--             <div id="upcoming&#45;events" class="section&#45;container featured&#45;text clearfix"> -->
-                <!--               <img src="images/gospel_meeting_spring_2016.png"> -->
-                <!--  -->
-                <!--             </div><!&#45;&#45; .section&#45;container &#45;&#45;> -->
-                <!--             <!&#45;&#45; End: Website Intro Paragraph &#45;&#45;> -->
-                <!--         </div><!&#45;&#45; .col&#45;sm&#45;12 &#45;&#45;> -->
-                <!--     </div><!&#45;&#45; .row &#45;&#45;> -->
-                <!-- </div><!&#45;&#45; .container&#45;fluid &#45;&#45;> -->
-                <!-- <!&#45;&#45; End: Section 3 &#45;&#45;> -->
 
-                <!-- =========== Footer =========== -->
+                <!-- =========== Footer Alt =========== -->
                 <footer class="container-fluid horizontal-section-container clearfix">
                     <div class="row">
 
@@ -236,16 +162,15 @@
 
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2917.18833307294!2d-88.02966119999999!3d43.016422899999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88050542307b66fd%3A0xc6cd4d9f2178f8e0!2s9413+W+Greenfield+Ave%2C+West+Allis%2C+WI+53214!5e0!3m2!1sen!2sus!4v1427687634445" width="400" height="300" frameborder="0" style="border:0"></iframe>
 
-
                             </div><!-- .section-container -->
-                            <!-- End: Affiliates Carousel -->
+                            <!-- End: Affiliates Carousel -->                            
                         </div><!-- .col-sm-6 -->
 
                         <div class="col-sm-6">
                             <!-- Contact Us -->
                             <div id="footer-contact-us" class="section-container clearfix">
 
-                                <a href="contact-2.html" class="section-header footer-header">
+                                <a href="contact.html" class="section-header footer-header">
                                     <h5 class="text">Contact Us</h5>
                                 </a><!-- .section-header -->
 
@@ -278,12 +203,12 @@
                                 </div><!-- .section-content -->
 
                             </div><!-- .section-container -->
-                            <!-- End: Contact Us -->
+                            <!-- End: Contact Us -->                            
                         </div><!-- .col-sm-6 -->
 
                     </div><!-- .row -->
                 </footer><!-- .container-fluid -->
-                <!-- End: Footer -->
+                <!-- End: Footer Alt -->           
 
             </div><!-- .inside-body-content-container -->
             <!-- End: Page Body Inside Content -->
@@ -331,6 +256,25 @@
         <script src="js/functions.js"></script>
         <!-- <script src="js/functions-min.js"></script> -->
         <script src="js/initialise-functions.js"></script>
+
+      <!-- <script> -->
+      <!--   var refTagger = { -->
+      <!--     settings: { -->
+      <!--       bibleVersion: "ESV"      -->
+      <!--     } -->
+      <!--   }; -->
+      <!--   (function(d, t) { -->
+      <!--     var g = d.createElement(t), s = d.getElementsByTagName(t)[0]; -->
+      <!--     g.src = "//api.reftagger.com/v2/RefTagger.js"; -->
+      <!--     s.parentNode.insertBefore(g, s); -->
+      <!--   }(document, "script")); -->
+      <!-- </script> -->
+
+      <!-- Go Here: http://labs.bible.org/NETBibleTagger to add this to your site. -->
+      <script type="text/javascript" defer="defer" src="https://labs.bible.org/api/NETBibleTagger/v2/netbibletagger.js">
+      org.bible.NETBibleTagger.voidOnMouseOut = true;
+      org.bible.NETBibleTagger.customCSS = false;
+      </script>
 
     </body>
 </html>
