Floated the picture

--- a/what-to-expect.html
+++ b/what-to-expect.html
@@ -109,8 +109,9 @@
                                     <h1 class="page_title">What to expect</h1>
 
                                     <div class="row">
-                                      <div class="col-sm-6">
+                                      <div class="col-sm-12">
                                         
+                                        <img src="images/church_group_picture_2016.jpg" style="float:right; width: 600px; margin-left: 12px; margin-bottom: 10px;">
                                         <p>Here is what you can expect when you visit.</p>
 
                                         <p>We are a group of individuals striving together to live a more godly and pure life.  We are a family and hope you will get a sense of that when you visit.</p>
@@ -130,9 +131,6 @@
                                         <p>Our service is intended follow examples we see in the New Testament to the best of our ability and will be happy to study with you why we do what we do or anything else you may have questions on.  Please stick around a bit so we can get to know you more.</p>
 
                                         <p>Hope to see you soon.</p>
-                                      </div>
-                                      <div class="col-sm-6">
-                                        <img src="images/church_group_picture_2016.jpg" class="max-width-image">
                                       </div>
                                     </div>
 
