Updated what we believe section

--- a/what-we-believe.html
+++ b/what-we-believe.html
@@ -109,48 +109,38 @@
                                     <h1 class="page_title">What we believe</h1>
 
                                     <div class="row">
+                                      <div class="col-sm-12">
+                                      <h3>The Good News</h3>
+
+                                      <p><i>But now the righteousness of God has been manifested apart from the law, although the Law and the Prophets bear witness to it— the righteousness of God through faith in Jesus Christ for all who believe. For there is no distinction: for all have sinned and fall short of the glory of God, and are justified by his grace as a gift, through the redemption that is in Christ Jesus, whom God put forward as a propitiation by his blood, to be received by faith. This was to show God’s righteousness, because in his divine forbearance he had passed over former sins. It was to show his righteousness at the present time, so that he might be just and the justifier of the one who has faith in Jesus.</i></p>
+                                      <p>– Romans 3:21–26 (ESV) –</p>
+
+                                      <p>The Good News (or Gospel) is emphasized throughout the Bible, but Paul explained it very succinctly in this paragraph. Go ahead and read it again and then return to reading this. There are three basic aspects of the good news that are explained in this paragraph.</p>
+                                      </div>
+                                    </div>
+                                    <div class="row">
                                       <div class="col-sm-4">
-                                        <img src="images/bad_news.jpg">
-                                        <h3>The Bad News</h3>
-                                        <p>
-                                          There is a great God that created everyone so that we might know and love him. However, each of us has been wicked (Rom 3.23). We have rebelled against this great and loving God. Though he created us, we’ve acted like we are greater than him and have served ourselves instead.
-                                        </p>
-                                        <p>
-                                        We are not good people who make mistakes now and then. We have been selfishly working against God and we will face the consequences from this just God (Romans 1.18).
-                                        </p>
-                                        <p>
-                                        There is nothing we can do to remove this guilt from ourselves. We will inevitably face God’s judgment.
+                                        <!-- <img src="images/bad_news.jpg"> -->
+                                        <h3>Our Problem: Guilt</h3>
+                                        <p>First, everyone is guilty. The God who created and loves us has been angry with all of us. We are guilty of rebelling against him. People have allowed themselves to no longer acknowledge God but to worship idols or their own wants instead (Romans 1:18-23). It’s not as though we are good people who make mistakes now and then. No, we have been selfishly working against God and will face his righteous judgment. Even people who have been religious and tried to become good are guilty (Romans 2:1-5).</p>
+                                        <p>It may take a lot to see our own guilt, but let it settle in. If you’re honest, you have likely even failed to keep your own standards, let alone God’s good standards. We start to truly recognize our guilt when we realize that we haven’t merely broken arbitrary rules. We have betrayed our Creator, the one who genuinely loves us. God is angered because of our wicked thoughts and actions, but this doesn’t mean he hates us. In fact, he has always loved us.</p>
                                         </p>
                                       </div>
                                       <div class="col-sm-4">
-                                        <img src="images/good_news.jpg">
-                                        <h3>The Good News</h3>
-                                        <p>
-                                          Yet, even given all of this, God has made a way so that we can be rescued. His son Jesus came to earth as a human to die for our guilt. Jesus saved us in a way like no one else. He took our penalty, bore the cost of our guilt.
-                                        </p>
-                                        <p>
-                                        Because of this amazing act of grace, if we humbly turn to him in sorrow for our guilt (James 4.6-10), he will show us mercy and forgive us for our wickedness!
-                                        </p>
-                                        <p>
-                                        What a wonderful God, that he would love us even while we hated him (Romans 5.6-11)! There is no one else we can turn to who will love us so faithfully and graciously.
-                                        </p>
-                                        <p>
-                                        Thanks to God, he raised Jesus from death back to life, proving that he is God’s son and that all he did and taught was what we should follow and obey – and our resurrection.
-                                        </p>
+                                        <!-- <img src="images/good_news.jpg"> -->
+                                        <h3>God’s Solution: Sacrifice</h3>
+                                        <p>God has loved us–even though we’ve hated him (Romans 5:6-8)–he’s loved us by sacrificing for us. In this paragraph, Paul calls it a propitiation. In the pagan world, this word referred to a sacrifice or gift that was given to a god to appease its anger. But notice what is so special about this propitiation–it’s not offered by us, but God! It wasn’t our idea to provide a gift for God to forgive us. We didn’t think of it and we wouldn’t be able to o ffer something great enough. God himself lovingly, graciously covered the cost of our guilt by the death of his own Son. God could do this because all sin is ultimately and most importantly against him (Psalms 51:4). He has the right to forgive or not. But forgiveness doesn’t just happen by the flip of a magical switch. Forgiveness requires payment of some kind, a sacrifice. For God to love us, for Jesus to love us and forgive us, it cost him his own life. This love was proven when God later raised Jesus from death (Romans 1:4). It showed that he truly was the Son of God, that God really was rescuing us from our guilt.</p>
                                       </div>
                                       <div class="col-sm-4">
-                                        <img src="images/your_response.jpg">
-                                        <h3>Your Response?</h3>
-                                        <p>
-                                          In the first speech given about Jesus after he had done all of this for us, one of Jesus’ followers told the crowd that God was giving his Spirit so that everyone who calls on the name of Jesus will be rescued. When the crowds realized that they had been involved with murdering Jesus, they didn’t know what to do. Peter told them to turn away from their wickedness and be immersed in water (baptized) in order to be forgiven of their guilt and in order to receive the gift of God’s Spirit (Acts 2).
-                                        </p>
-                                        <p>
-                                          God gave us his Spirit to purify us. He saved us so that, as his people, we would be enthusiastic about doing good (Titus 2). Christians are not to be stagnate, but are to continually pursue Jesus Christ, to share in his suffering and in his resurrection (Philippians 3).
-                                        </p>
-                                        <p>
-                                          Of course, not everyone who hears this message believes it. If you doubt all this, don’t turn away without first looking into the claim that Jesus was resurrected. This has been the foundational claim of Christianity since the very beginning and cannot reasonably be explained away.
-                                        </p>
+                                        <!-- <img src="images/your_response.jpg"> -->
+                                        <h3>Our Response: Trust</h3>
+                                        <p>Did you notice what Paul kept on saying about our response to what God has done for us? Paul said again and again that this gift is for all who believe, who have faith. In other words, our side of the solution is simply obedient trust in God’s sacrifice. God considers our faith in Christ as righteousness (Romans 4:5). That is, we only have forgiveness because we have been united with Christ. Baptism is the way God has chosen for us to be united with Christ through obedient faith (Rom 6:1-4; Col 2:11-12; Gal 3:23-27). Baptism is not something separate from faith. It’s not something we do at birth long before we could ever believe. It’s not something we put off as something separate from becoming a Christian. Rather, we do what the early church did; we baptize a person who recognizes the need to be rescued from guilt and who wishes to faithfully commit to Christ (Acts 2:37-38; 16:14-15, 30-33). But trust isn’t just a one-time event. God saved us so that, as his people, we would be be changed and renewed (Titus 2.11-14). We continually admit our failures, look to his grace, and strive to live more faithfully.</p>
                                       </div>
+                                    </div>
+                                    <div class="row">
+                                      <div class="col-sm-12">
+                                        <p>The Good News is for all. We’ll gladly study with you to explain the Good News further. Our trust in the Lord impels us to share it with others.</p>
+                                    </div>
 
                                 </div><!-- .section-content -->
 
