--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <div class="col-sm-12">
                             <!-- Website Intro Paragraph -->
                             <div id="upcoming-events" class="section-container featured-text clearfix">
-                              <img src="images/hamilton_meeting.png">
+                              <!-- <img src="images/hamilton_meeting.png"> -->
 
                             </div><!-- .section-container -->
                             <!-- End: Website Intro Paragraph -->
@@ -264,13 +264,13 @@
                                             <!-- list item -->
                                             <div class="item clearfix"><div class="item-content">
                                                 <div class="icon"><span class="glyphicon glyphicon-earphone"></span></div>
-                                                <h6 class="title">414-393-8777</h6>
+                                                <h6 class="title">414-243-9849</h6>
                                             </div></div>
 
                                             <!-- list item -->
                                             <div class="item clearfix"><div class="item-content">
                                                 <div class="icon"><span class="glyphicon glyphicon-envelope"></span></div>
-                                                <h6 class="title">masemvenuso@gmail.com</h6>
+                                                <h6 class="title">jakedieman@gmail.com</h6>
                                             </div></div>
                                         </div><!-- .col-xs-6 -->
 
