Change contact information

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
           <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body class="background-light twlsky-orange twlsky-mixedcolours isolated-sections loader-bar">      
+    <body class="background-light twlsky-orange twlsky-mixedcolours isolated-sections loader-bar">
 
         <!-- Page Outer Container -->
         <div class="outer-container clearfix">
@@ -104,7 +104,7 @@
 
                                         <!-- contact details -->
                                         <div class="col-sm-5">
-                                            
+
                                             <!-- Contact Details -->
 
                                             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2917.18833307294!2d-88.02966119999999!3d43.016422899999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88050542307b66fd%3A0xc6cd4d9f2178f8e0!2s9413+W+Greenfield+Ave%2C+West+Allis%2C+WI+53214!5e0!3m2!1sen!2sus!4v1427687634445" width="400" height="300" frameborder="0" style="border:0"></iframe>
@@ -120,13 +120,13 @@
                                                 <!-- list item -->
                                                 <li class="item clearfix"><div class="item-content">
                                                     <div class="icon"><span class="glyphicon glyphicon-earphone"></span></div>
-                                                    <h6 class="title">414-393-8777</h6>
+                                                    <h6 class="title">414-430-2000</h6>
                                                 </div></li>
 
                                                 <!-- list item -->
                                                 <li class="item clearfix"><div class="item-content">
                                                     <div class="icon"><span class="glyphicon glyphicon-envelope"></span></div>
-                                                    <h6 class="title"><a href="#">masemvenuso@gmail.com</a></h6>
+                                                    <h6 class="title"><a href="#">biblestudies3@gmail.com</a></h6>
                                                 </div></li>
 
                                                 <!-- list item -->
@@ -140,7 +140,7 @@
                                                     </h6>
                                                 </div></li>
 
-                                            </ul><!-- .vertical-simple-list --> 
+                                            </ul><!-- .vertical-simple-list -->
 
 
 
