--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                                             <!-- list item -->
                                             <div class="item clearfix"><div class="item-content">
                                                 <div class="icon"><span class="glyphicon glyphicon-envelope"></span></div>
-                                                <h6 class="title">jakedieman@gmail.com</h6>
+                                                <h6 class="title">biblestudies3@gmail.com</h6>
                                             </div></div>
                                         </div><!-- .col-xs-6 -->
 
