--- a/what-we-believe.html
+++ b/what-we-believe.html
@@ -195,13 +195,13 @@
                                             <!-- list item -->
                                             <div class="item clearfix"><div class="item-content">
                                                 <div class="icon"><span class="glyphicon glyphicon-earphone"></span></div>
-                                                <h6 class="title">414-393-8777</h6>
+                                                <h6 class="title">414-430-2000</h6>
                                             </div></div>
 
                                             <!-- list item -->
                                             <div class="item clearfix"><div class="item-content">
                                                 <div class="icon"><span class="glyphicon glyphicon-envelope"></span></div>
-                                                <h6 class="title">masemvenuso@gmail.com</h6>
+                                                <h6 class="title">biblestudies3@gmail.com</h6>
                                             </div></div>
                                         </div><!-- .col-xs-6 -->
 
