this is my test commit! Can you find the 2 text changes????

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                                 <div class="item">
                                     <div class="text bottom left">
-                                        <a href="what-we-believe.html"><h2>Together we will live forever</h2></a>
+                                        <a href="what-we-believe.html"><h2>Together we will live forever and ever and ever AND EVA!!!!!</h2></a>
                                         <div class="clearfix"></div>
                                         <!-- <a href="what&#45;we&#45;believe.html"><h5>Interested?</h5></a> -->
                                     </div>
@@ -115,7 +115,7 @@
                                     <div class="text bottom right no-side-padding">
                                         <!-- <a href="resources.html"><h2></h2></a> -->
                                         <div class="clearfix"></div>
-                                        <a href="resources.html"><h6>"Every good gift and every perfect gift is from above, coming down from the Father of lights with whom there is no variation or shadow due to change." (James 1:17)</h6></a>
+                                        <a href="resources.html"><h6>"Jesus wept" (John something)</h6></a>
                                     </div>
                                     <a href="resources.html"><img class="lazyOwl" data-src="images/vanilla-sky-mke.jpg" src="#" alt="Vanilla sky"></a>
                                 </div>
