--- a/NewTemplate/index.html
+++ b/NewTemplate/index.html
@@ -47,19 +47,38 @@
         </div>
 	</header>
 	<!-- end header -->
-	<section id="featured">
-  <i class="fa fa-picture-o"></i>
-	</section>
-	<section class="callaction">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="aligncenter"><h1 class="aligncenter">Welcome!</h1><span class="clear spacer_responsive_hide_mobile " style="height:13px;display:block;"></span>We are a simple group of Christians who meet together here in the Milwaukee area. We strive to follow the word of God as communicated in the Bible.</div>
-			</div>
-		</div>
-	</div>
-	</section>
 
+
+	<!-- Slider -->
+        <div id="main-slider" class="flexslider">
+            <ul class="slides">
+              <li>
+                <img src="img/slides/1.jpg" alt="" />
+                <div class="flex-caption">
+                   <div class="item_introtext">
+					<strong>Welcome!</strong>
+					<p>We are a simple group of Christians who meet together here in the Milwaukee area. We strive to follow the word of God as communicated in the Bible.</p> </div>
+                </div>
+              </li>
+              <li>
+                <img src="img/slides/2.jpg" alt="" />
+                <div class="flex-caption">
+                     <div class="item_introtext">
+					<strong>Welcome!</strong>
+					<p>We are a simple group of Christians who meet together here in the Milwaukee area. We strive to follow the word of God as communicated in the Bible.</p> </div>
+                </div>
+              </li>
+              <li>
+                <img src="img/slides/3.jpg" alt="" />
+                <div class="flex-caption">
+                     <div class="item_introtext">
+					<strong>Welcome!</strong>
+					<p>We are a simple group of Christians who meet together here in the Milwaukee area. We strive to follow the word of God as communicated in the Bible.</p> </div>
+                </div>
+              </li>
+            </ul>
+        </div>
+	<!-- end slider -->
 
 	<section id="content">
 
